# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1118 2009-12-24 00:40:18 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/12/23) Added multible Kernel::System::Ticket::Custom module backend
    support. Can now be defined via config key 'Ticket::CustomModule', e. g.

    <ConfigItem Name="Ticket::CustomModule###001-CustomModule" Required="0" Valid="0">
        <Description Lang="en">A module with custom functions to redefine ....</Description>
        <Description Lang="de">Ein Modul mit angepassten Funktionen das ...</Description>
        <Group>Ticket</Group>
        <SubGroup>Core::Ticket</SubGroup>
        <Setting>
            <String Regex="">Kernel::System::Ticket::Custom</String>
        </Setting>
    </ConfigItem>

 - (2009/12/21) Added the ability to hide the Queue, SLA and/or Service in
    the Customer interface.
 - (2009/12/15) Changed rich text editor from FCKEditor 2.6.4.1 to CKEditor 3.0.1
 - (2009/12/14) Fixed bug#4660 - Admin Notification module does not send mail
    to customer users in groups.
 - (2009/12/14) Added the ability to use AdminEmail to send notifications based
    on roles.
 - (2009/12/14) Updated SysConfig to have toolbars and Admin section to use
    plural in interface where appropriate.
 - (2009/12/11) Replaced all OptionStrgHashRef() with the newer BuildSelection().
 - (2009/12/09) Added archive feature to improve performance.
 - (2009/12/09) Updated CPAN module Text::CSV to version 1.16.
 - (2009/12/08) Fixed bug#4570 - Not processed attachment on incoming email
    (value too long for type).
    Increased varchar of article_attachment.content_type from 250 to 450.
 - (2009/12/08) Fixed bug#1698 - Send emails with the real name from the agent.